--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -34,8 +34,8 @@
     </div>
     <div style="clear: left; padding-top:50px;">
         <p>{{ material_list.0 }}: {{ plastic }}g <input type="button" class="ui red button" value="檢查存貨"></p> 
-        <p>{{ material_list.1 }}: {{ frp }}g</p>
-        <p>{{ material_list.2 }}: {{ fabric }}g</p>
+        <p>{{ material_list.1 }}: {{ frp }}g <input type="button" class="ui red button" value="檢查存貨"></p>
+        <p>{{ material_list.2 }}: {{ fabric }}g <input type="button" class="ui red button" value="檢查存貨"></p>
     </div>
 {% endif %}
 {% endblock %}
