--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -33,9 +33,9 @@
         </ul>
     </div>
     <div style="clear: left; padding-top:50px;">
-        <p>{{ material_list.0 }}: {{ plastic }}g <input type="button" class="ui red button" value="檢查存貨"></p> 
-        <p>{{ material_list.1 }}: {{ frp }}g <input type="button" class="ui red button" value="檢查存貨"></p>
-        <p>{{ material_list.2 }}: {{ fabric }}g <input type="button" class="ui red button" value="檢查存貨"></p>
+        <p>{{ material_list.0 }}: {{ plastic }}g 存貨: {{ material_list.0.inventory }}g 不足: {{ p_quan }}g</p> 
+        <p>{{ material_list.1 }}: {{ frp }}g</p>
+        <p>{{ material_list.2 }}: {{ fabric }}g</p>
     </div>
 {% endif %}
 {% endblock %}
