--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -6,6 +6,10 @@ nav #logo {
     margin-left: 10px;
 }
 
+.ui.button {
+	font-family: Microsoft JhengHei;
+}
+
 .ui.menu.c-font {
     font-family: Microsoft JhengHei;
     font-size: 1.2rem;
@@ -16,12 +20,12 @@ nav #logo {
 }
 
 .ui.menu .item {
-    padding-top: 0em;
-    padding-bottom: 0em;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
 
 #nav-img {
-    width: 5rem;
+    width: 5.5rem;
 }
 
 h1, h2, h3, h4, h5 {
@@ -32,23 +36,34 @@ main p {
     font-size: 14pt;
 }
 
+p#top {
+	margin-bottom: 0;
+}
+
 .tree ul {
+	padding-left: 0;
 	padding-top: 20px; position: relative;
-	
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+	margin-top: 0;
+	transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
 }
 
 .tree li {
 	float: left; text-align: center;
 	list-style-type: none;
 	position: relative;
-	padding: 20px 5px 0 5px;
+	padding: 20px 5px 0 50px;
 	
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+	transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+}
+
+.tree ul div {
+	width: 100%;
+	height: 150px;
+	margin: 0 auto;
 }
 
 .tree li::before, .tree li::after{
@@ -97,26 +112,25 @@ right connector from last child*/
 
 .tree li a{
 	border: 1px solid #ccc;
-	padding: 5px 10px;
+	padding: 15px 10px;
 	text-decoration: none;
-	color: #666;
-	font-family: arial, verdana, tahoma;
-	font-size: 11.5px;
+	color: rgb(37, 36, 36);
+	font-size: 16px;
 	display: inline-block;
 	
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	
-	transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	-moz-transition: all 0.5s;
+	transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
 }
 
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
 .tree li a:hover, .tree li a:hover+ul li a {
-	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+	background: #41c5c5; color: rgb(255, 255, 255); border: 1px solid #2e9b9b;
 }
 /*Connector styles on hover*/
 .tree li a:hover+ul li::after, 
@@ -124,4 +138,8 @@ right connector from last child*/
 .tree li a:hover+ul::before, 
 .tree li a:hover+ul ul::before{
 	border-color:  #94a0b4;
+}
+
+.ui.table {
+	margin: 0 auto;
 }
