--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -16,7 +16,8 @@
 
     <style>
         main{
-            padding: 3% 2%;
+            padding: 1% 1% 15% 1%;
+            font-size: 13pt;
             font-family: Microsoft JhengHei!important;
         }
     </style>
