show chart but not complete

--- a/templates/modules/member/member.html
+++ b/templates/modules/member/member.html
@@ -1,7 +1,7 @@
 {% extends 'base/layout.html' %}
 
 {% block main %}
-{% for member in member_list %}
+{% comment %} {% for member in member_list %}
     <table class="ui celled table">
         <thead>
           <tr class="center aligned">
@@ -31,31 +31,7 @@
           </tr>
         </tbody>
       </table>
-{% endfor %}
-{% comment %} <div id="container"></div>
-  <script>
-    Highcharts.chart('container', {
-        chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Historic World Population by Region'
-        },
-        xAxis: {
-            categories: ['Africa', 'America', 'Asia', 'Europe', 'Oceania']
-        },
-        series: [{
-            name: 'Year 1800',
-            data: [107, 31, 635, 203, 2]
-        }, {
-            name: 'Year 1900',
-            data: [133, 156, 947, 408, 6]
-        }, {
-            name: 'Year 2012',
-            data: [1052, 954, 4250, 740, 38]
-        }]
-    });
-  </script> {% endcomment %}
+{% endfor %} {% endcomment %}
 <div id="container"></div>
 <script>
   Highcharts.chart('container', {{ chart|safe }});
