add fixed chart, still not complete

--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -8,7 +8,7 @@
             <input id="date" type="date" name="date">
         </div>
         <div class="two wide field">
-            <select class="ui fluid search dropdown" name="umbrella">
+            <select class="ui dropdown" name="umbrella">
                 <option value="抗UV直傘">抗UV直傘</option>
                 <option value="防風直傘">防風直傘</option>
                 <option value="輕量直傘">輕量直傘</option>
