--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -28,6 +28,7 @@
             </div>
         </div>
         <a class="item" href="{% url 'inventory:schedule_form' %}">生產排程</a>
+        <a class="item" href="{% url 'transaction:chart' %}">銷售分析</a>
         <div class="ui simple dropdown item">
             會員管理 <i class="dropdown icon"></i>
             <div class="menu">
