--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -27,7 +27,8 @@
     <div class="ui container">
         <main>
             {% block main %}
-
+                {% load static %}
+                    <script src="{% static 'js/dropdown.js' %}"></script>
             {% endblock %}
         </main>
         {% block custom_script %}
