--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -28,7 +28,10 @@
             </div>
         </div>
         <a class="item" href="{% url 'inventory:schedule_form' %}">生產排程</a>
-        <a class="item" href="{% url 'transaction:chart' %}">銷售分析</a>
+        <a class="item" href="{% url 'transaction:season' %}">季節銷售分析</a>
+        <a class="item" href="{% url 'transaction:chart' %}">月份圖表分析</a>
+        <a class="item" href="{% url 'activity:detail' %}">行銷活動</a>
+        <a class="item" href="{% url 'member:search' %}">會員查詢</a>
         <div class="ui simple dropdown item">
             會員管理 <i class="dropdown icon"></i>
             <div class="menu">
