--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -32,6 +32,7 @@
         <a class="item" href="{% url 'transaction:chart' %}">月份圖表分析</a>
         <a class="item" href="{% url 'activity:detail' %}">行銷活動</a>
         <a class="item" href="{% url 'member:search' %}">會員查詢</a>
+        <a class="item" href="{% url 'member:piechart' %}">會員分布圖</a>
         <div class="ui simple dropdown item">
             會員管理 <i class="dropdown icon"></i>
             <div class="menu">
