--- a/templates/modules/member/membersearch.html
+++ b/templates/modules/member/membersearch.html
@@ -18,7 +18,7 @@
         </div>
         <div class="two wide field">
             <label for='target_gender'>目標客群性別</label>
-            <select name='target_gender' >
+            <select class="ui dropdown" name='target_gender' >
                 <option value="all">全選</option>
                 <option value="F">女性</option>
                 <option value="M">男性</option>
@@ -26,7 +26,7 @@
         </div>
         <div class="two wide field">
             <label for='target_dwelling'>目標客群居住地</label>
-            <select name="target_dwelling" >
+            <select class="ui dropdown" name="target_dwelling" >
                 <option value="all">全選</option>
                 <option value="北部">台灣北部</option>
                 <option value="中部">台灣中部</option>
