--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -12,7 +12,7 @@
             </select>
         </div>
         <div class="field">  
-            <select class="ui dropdown" name="year">
+            <select class="ui dropdown" name="season">
                 <option value="">請選擇季節</option>
                 <option value="春季">春季</option>
                 <option value="夏季">夏季</option>
