--- a/templates/modules/member/membersearch.html
+++ b/templates/modules/member/membersearch.html
@@ -60,7 +60,7 @@
             <td>{{ m.age }}</td>
             <td>{{ m.gender }}</td>
             <td>{{ m.dwelling }}</td>
-            <td>{{ m.cellphone }}</td>
+            <td>{{ m.cellphone_number }}</td>
             <td>{{ m.email }}</td>
         </tr>
         {% endfor %}
