--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -34,7 +34,12 @@
 <p>{{ uv_s_sold }}</p>
 <p>{{ uv_auto_sold }}</p>
 <p>{{ uv_manual_sold }}</p>
-<p> {{ a }}</p>
+<p>{{ wind_s_sold }}</p>
+<p>{{ wind_auto_sold }}</p>
+<p>{{ wind_manual_sold }}</p>
+<p>{{ l_s_sold }}</p>
+<p>{{ l_auto_sold }}</p>
+<p>{{ l_manual_sold }}</p>
 
 {% load static %}
 <script src="{% static 'js/dropdown.js' %}"></script>
