--- a/templates/modules/inventory/inventory.html
+++ b/templates/modules/inventory/inventory.html
@@ -1,34 +1,8 @@
 {% extends 'base/layout.html' %}
 
 {% block main %}
+<h2>存貨狀況</h2>
 
-{% comment %} <div class="ui horizontal segments">
-    <div class="ui padded segment">
-        <h1 class="ui dividing header">Products</h1>
-        <div class="ui horizontal divider"></div>
-            {% for product in product_list %}
-                {% if product.inventory < product.level %}
-                    <p><a href="{% url 'inventory:product_detail' product.pk %}" style="color:red;">{{ product.name }}: {{ product.inventory }}</a></p>
-                {% else %}
-                    <p><a href="{% url 'inventory:product_detail' product.pk %}">{{ product.name }}: {{ product.inventory }}</a></p>
-                {% endif %}
-            {% endfor %}
-    </div>
-    <div class="ui padded segment">
-        <h1 class="ui dividing header">Components</h1>
-        <div class="ui horizontal divider"></div>
-            {% for component in component_list %}
-                <p>{{ component.name }}: {{ component.inventory }}</p>
-            {% endfor %}
-    </div>
-    <div class="ui padded segment">
-        <h1 class="ui dividing header">Materials</h1>
-        <div class="ui horizontal divider"></div>
-        {% for material in material_list %}
-            <p>{{ material.name }}: {{ material.inventory }}&nbsp&nbsp{% if material.inventory < material.material_detail.eoq %}<button class="ui red narrow button">已達再訂購點！</button>{% endif %}</p>
-        {% endfor %}
-    </div>
-</div> {% endcomment %}
 <div class="ui segment">
     <div class="ui three column grid">
         <div class="column">
