--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -1,6 +1,9 @@
 {% extends 'base/layout.html' %}
 
 {% block main %}
+<h2>季節銷售狀況</h2>
+<hr>
+<br>
 <form action="{% url 'transaction:season' %}" method="POST" class="ui form">{% csrf_token %}
     <div class="three fields">
         <div class="three wide field">
@@ -11,7 +14,7 @@
                 <option value="2018">2018</option>
             </select>
         </div>
-        <div class="field">  
+        <div class="two wide field">  
             <select class="ui dropdown" name="season">
                 <option value="">請選擇季節</option>
                 <option value="春季">春季</option>
@@ -29,9 +32,55 @@
         </div>
     </div>
 </form>
-<br>
-<br>
-<p>{{ uv_s_sold }}</p>
+<h3>{{ req_year }} {{ req_season }}</h3>
+<table class="ui sortable celled table">
+    <thead>
+        <tr>
+            <th>產品名稱</th>
+            <th class="sorted ascending">銷售數量</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>抗UV直傘</td>
+            <td>{{ uv_s_sold }}</td>
+        </tr>
+        <tr>
+            <td>抗UV自動摺傘</td>
+            <td>{{ uv_auto_sold }}</td>
+        </tr>
+        <tr>
+            <td>抗UV手開摺傘</td>
+            <td>{{ uv_manual_sold }}</td>
+        </tr>
+        <tr>
+            <td>防風直傘</td>
+            <td>{{ wind_s_sold }}</td>
+        </tr>
+        <tr>
+            <td>防風自動摺傘</td>
+            <td>{{ wind_auto_sold }}</td>
+        </tr>
+        <tr>
+            <td>防風手開摺傘</td>
+            <td>{{ wind_manual_sold }}</td>
+        </tr>
+        <tr>
+            <td>輕量直傘</td>
+            <td>{{ l_s_sold }}</td>
+        </tr>
+        <tr>
+            <td>輕量自動摺傘</td>
+            <td>{{ l_auto_sold }}</td>
+        </tr>
+        <tr>
+            <td>輕量手開摺傘</td>
+            <td>{{ l_manual_sold }}</td>
+        </tr>
+    </tbody>
+</table>
+
+{% comment %} <p>{{ uv_s_sold }}</p>
 <p>{{ uv_auto_sold }}</p>
 <p>{{ uv_manual_sold }}</p>
 <p>{{ wind_s_sold }}</p>
@@ -39,9 +88,10 @@
 <p>{{ wind_manual_sold }}</p>
 <p>{{ l_s_sold }}</p>
 <p>{{ l_auto_sold }}</p>
-<p>{{ l_manual_sold }}</p>
+<p>{{ l_manual_sold }}</p> {% endcomment %}
 
 {% load static %}
 <script src="{% static 'js/dropdown.js' %}"></script>
+<script src="{% static 'js/tablesort.js' %}"></script>
 
 {% endblock %}
