--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -29,8 +29,7 @@
 </form>
 <br>
 {% if component_tree_list %}
-    <p id="top">{{ date }} {{ get_um }} {{ num }}支</p>
-    <button class="ui orange button" onclick="displayTree()">檢視產品結構樹</button>
+    <p id="top">{{ date }} {{ get_um }} {{ num }}支&nbsp&nbsp<button class="ui teal button" onclick="displayTree()">檢視產品結構樹</button></p>
     <div style="display:none" class="tree" id="tree">
         <ul>
             <div>
